Tidying; fixed some GEDCOM export errors; disabled migration model pending bug fix; removed diacriticals from datasets pending GEDCOM version update.